--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test": "mocha --timeout 5000 --require ts-node/register './test/**/*.spec.ts'",
+    "test:watch": "mocha --timeout 5000 --watch --require ts-node/register ./test/**/*.spec.ts",
+    "test:cov": "nyc --reporter=lcov --reporter=cobertura mocha --timeout 5000 --reporter=cypress-multi-reporters --reporter-options configFile=cypress-multi-reporters.json --require ts-node/register --recursive './test/**/*.spec.ts'",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/mocha --runInBand",
+    "test:single": "mocha --require ts-node/register ",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
@@ -25,9 +26,18 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^9.0.0",
+    "@types/sinon": "^10.0.2",
+    "chai": "^4.3.4",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "mocha": "^9.0.3",
+    "mocha-junit-reporter": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sinon": "^11.1.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -44,7 +54,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "27.0.6",
     "prettier": "^2.3.2",
-    "supertest": "^6.1.3",
+    "supertest": "^6.1.5",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
